PROJECT(ud)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(UD_INCS ${CMAKE_CURRENT_SOURCE_DIR}/inc)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src UD_SRCS)
SET(UD_LLDS ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(UD_LIBS "")

ADD_SUBDIRECTORY(lib)

INCLUDE_DIRECTORIES(${UD_INCS})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
ADD_LIBRARY(ud SHARED ${UD_SRCS})

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
ADD_EXECUTABLE(udapp ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
TARGET_LINK_LIBRARIES(udapp ud)
